--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "1.13.1"
+    "graphql-yoga": "1.13.1",
+    "prisma-binding": "1.5.18"
   }
 }
